discussion/kv_engine/155194/155194_rev15_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46729: Use the global executor from the core [WIP]

Move the tasks over to use the global executor

Change-Id: I33cd997a2a79544ab799af9321ca4a8cb208c711

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-06-09 11:36:52.000000000
Message: 
Uploaded patch set 15: Patch Set 14 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-09 12:40:28.000000000
Message: 
Patch Set 15: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11665/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11665/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19250/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9671/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/tasks.def.h:25:1: error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/tasks.def.h:25:6: error: use of undeclared identifier "MultiBGFetcherTask" [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/tasks.def.h:25:26: error: use of undeclared identifier "READER_TASK_IDX" [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/tasks.def.h:25:45: error: expected ";" after top level declarator [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
                                            ^
                                            ;

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9671/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/tasks.def.h:25:1:
error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9671/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8269/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31305/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11246/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10318/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11394/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
